# DrTutorial

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.cfg
SHAPE/: SRP21CR_BZCN_0001.rdat  SRP21CR_BZCN_0002.rdat  SRP21CR_BZCN_0003.rdat  SRPU21C_BZCN_0001.rdat  SRPU21C_BZCN_0002.rdat  SRPU21C_BZCN_0003.rdat  SRPU21C_BZCN_0004.rdat  SRPU21C_BZCN_0005.rdat
scripts/: DrKinfold  convert_rdat.py  drf_parser.py  make_SRP_images.sh  plot_accessibility.R  plot_energy_bands.R  thermo_accessibility.py  thermo_energy.py  thermo_predict.py
sequences/: SRP.mot  SRPn-H1-H2-R1-H3.fa  SRPn-H1-H2-S1-S2-H3.fa  SRPn-H1.fa  SRPn-H1a.fa  SRPn-H1b-H2a-H3a.fa  SRPn-H1b.fa  SRPn-H1c-H2a-H3a.fa  SRPn-H1c.fa  SRPn-H2-R1-R2.fa  SRPn-H2-S1-S2-S3-S4.fa
