[metadata]
name = drtutorial
version = 0.1.0
description = A guide to computational cotranscriptional folding using the SRP RNA - Data and Scripts


[options]
package_dir=
    =drconverters
packages=drconverters

include_package_data = True
scripts = 
  scripts/drf_parser.py
  scripts/convert_rdat.py
  scripts/thermo_predict.py
  scripts/make_SRP_images.sh
  scripts/plot_accessibility.R
  scripts/plot_energy_bands.R

